@startuml
'https://plantuml.com/class-diagram

abstract class Nontification{
#String tieuDe
#String noiDung
#int doUuTien
#int logo
#{abstract} void taoThongBao()
#{abstract} void guiThongBao()
#{abstract} void duaThongBao()
}

abstract class GuiThongBao{
#Notification taoThongBao()
#Notification guiThongBao()
}
Nontification <.. GuiThongBao
GuiThongBao <|-- PushNontification
GuiThongBao <|-- SMS
GuiThongBao <|-- LocalNontification
@enduml